@@ -1,3 +1,7 @@
+2008-01-08  Jonathan Tai  <jon@tgpsolutions.com>
+
+	* strongwind/cache.py: Document arguments to launchApplication().
+
 2008-01-07  Jonathan Tai  <jon@tgpsolutions.com>
 
 	* strongwind/accessibles.py: Add select() to the PageTab class; add
